added all files

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                       <li><span class="title">Address</span><span class="value">Indore, Madhya Pradesh, India</span></li>
                       <li><span class="title">e-mail</span><span class="value"><a href="mailto:patidar.sumit1110@gmail.com">patidar.sumit1110@gmail.com</a></span></li>
                       <li><span class="title">Phone</span><span class="value">+91 741 588 5005</span></li>
-                      <!--<li><span class="title">Freelance</span><span class="value available">Available</span></li>-->
+                      <li><span class="title">Github</span><span class="value">@sipspatidar</span></li>-->
                     </ul>
                   </div>
                 </div>
