--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                   <!-- /Portfolio Item 2 -->
 <!-- Portfolio Item 3 -->
                   <figure class="item" data-groups='["all", "PHP","JAVA"]'>
-                    <a target="_blank" href="http://www.svstutorial.eudaan.com/student_active">
+                    <a target="_blank" href="#">
                       <img src="images/portfolio/3.jpg" alt="">
                       <div>
                         <h5 class="name">Room Manager</h5>
@@ -378,7 +378,7 @@
                   <!-- /Portfolio Item 3 -->
 <!-- Portfolio Item 4 -->
                   <figure class="item" data-groups='["all", "Python"]'>
-                    <a target="_blank" href="http://www.svstutorial.eudaan.com/student_active">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=pgqRLzjtCjM">
                       <img src="images/portfolio/4.jpg" alt="">
                       <div>
                         <h5 class="name">Break the Bricks</h5>
@@ -391,7 +391,7 @@
 
 <!-- Portfolio Item 5 -->
                   <figure class="item" data-groups='["all", "Python"]'>
-                    <a target="_blank" href="http://www.svstutorial.eudaan.com/student_active">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=4zuehdGXqYY">
                       <img src="images/portfolio/5.jpg" alt="">
                       <div>
                         <h5 class="name">Car Racing</h5>
@@ -404,7 +404,7 @@
 
 <!-- Portfolio Item 6 -->
                   <figure class="item" data-groups='["all", "Python"]'>
-                    <a target="_blank" href="http://www.svstutorial.eudaan.com/student_active">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=ugYYK8DOocI">
                       <img src="images/portfolio/6.jpg" alt="">
                       <div>
                         <h5 class="name">Flappy Bird</h5>
