--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
               </div>
               <div class="home-page-block">
                 <div class="v-align">
-                  <h2>&lt; Sumit Patidar /></h2>
+                  <h2 id="typewritter"></h2>
                   <div id="rotate" class="text-rotate">
                     <div>
                       <p class="home-page-description">Student</p>
                     </div>
                     <div>
-                      <p class="home-page-description">Backend-developer</p>
+                      <p class="home-page-description">Software Engineer</p>
                     </div>
                   </div>
 
@@ -691,7 +691,7 @@
       <!-- /Main Content -->
     </div>
 
-
+	
     <script src="js/bootstrap.min.js"></script>
     <script src="js/page-transition.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
@@ -701,6 +701,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/jquery.hoverdir.js"></script>
+    <script src="js/typed.min.js"></script>
     <script src="js/main.js"></script>
 
     <!-- Demo Color changer Script -->
