update description and homepage

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="site-title-block">
           <h1 class="site-title">Sumit Patidar</h1>
-          <p class="site-description">Student</p>
+          <p class="site-description">Programmer</p>
         </div>
 
         <!-- Navigation & Social buttons -->
@@ -122,7 +122,7 @@
                   <h2 id="typewritter"></h2>
                   <div id="rotate" class="text-rotate">
                     <div>
-                      <p class="home-page-description">Student</p>
+                      <p class="home-page-description">Programmer</p>
                     </div>
                     <div>
                       <p class="home-page-description">Software Engineer</p>
@@ -131,8 +131,8 @@
 
                   <div class="block end" style="text-align: center">
                     <ul class="info-list">
-                      <li><span class="title">Age</span><span class="value">21</span></li>
-                      <li><span class="title">Address</span><span class="value">Indore, Madhya Pradesh, India</span></li>
+                      <li><span class="title">Age</span><span class="value">23</span></li>
+                      <li><span class="title">Address</span><span class="value">Mumbai, Maharastra, India</span></li>
                       <li><span class="title">e-mail</span><span class="value"><a href="mailto:patidar.sumit1110@gmail.com">patidar.sumit1110@gmail.com</a></span></li>
                       <li><span class="title">Phone</span><span class="value">+91 741 588 5005</span></li>
                       <li><span class="title">Github</span><span class="value">@sipspatidar</span></li>-->
@@ -147,16 +147,16 @@
             <section class="pt-page pt-page-2" data-id="about_me">
               <div class="section-title-block">
                 <h2 class="section-title">About Me</h2>
-                <h5 class="section-description">Quick Learner, Creative</h5>
+                <h5 class="section-description">Programmer, Quick Learner, Creative</h5>
               </div>
 
               <div class="row">
                 <div class="col-sm-6 col-md-6 subpage-block">
                   <div class="general-info">
                     <h3>I am Sumit Patidar</h3>
-                    <p>I am  pursuing Bachelor of Engineering from IES IPS Academy,Indore with Specialization in Computer Science(2014-2018).</p>
+                    <p>I have completed my Bachelor's Degree with Specialization in Computer Science. Currently I am working in Tata Consultancy Services as Assistant System Engineer with 1 year of experience.</p>
                     <br>
-					<p>I am fond of programming.I try to learn something new in programming.I made 2 desktop games using python language. </p>
+					<p>I have a key hand in python. I have completed 9 projects successfully, in that 5 are completely based on python language and other 4 are based on PHP, Java, JavaScript.</p>
                   </div>
                 </div>
 				 <div class="col-sm-6 col-md-6 subpage-block row">
@@ -168,7 +168,7 @@
                 <div  class="col-sm-12 col-md-12 subpage-block">
                   <div class="fun-fact-block gray-bg"> 
                     <i class="pe-7s-icon pe-7s-cash"></i>
-                    <p>Rewarded by honorable chief minister Mr. Shivraj Singh Chouhan on the occasion of “Medhavi Chhatra Samman Samaroh” in year 2014</p>
+                    <p>Rewarded by former Chief Minister of Madhya Pradesh Mr. Shivraj Singh Chouhan on the occasion of “Medhavi Chhatra Samman Samaroh” in year 2014</p>
                     <span class="fun-value"></span>
                   </div>
                 </div>
@@ -176,7 +176,7 @@
                 <div  class="col-sm-12 col-md-12 subpage-block">
                   <div class="fun-fact-block gray-bg"> 
                     <i class="pe-7s-icon pe-7s-study"></i>
-                    <p>Scored 100/100 marks in mathematics subject of 10th class in year 2012</p>
+                    <p>Scored 100/100 marks in Mathematics subject in High School Board Examination in year 2012</p>
                     <span class="fun-value"></span>
                   </div>
                 </div>
@@ -212,7 +212,7 @@
                       <h5 class="event-date">2014 - 18</h5>
                       <h4 class="event-name">BE (Computer Science)</h4>
                       <span class="event-description">RGPV University</span>
-                      <p>From IES IPS Acadeny, Indore with current CGPA 7.79</p>
+                      <p>From IES IPS Acadeny, Indore with CGPA 7.91</p>
                     </div>
                     <!-- Single event -->
                     <div class="timeline-event te-primary">
@@ -625,7 +625,7 @@
                       <i class="pe-7s-icon pe-7s-map-marker"></i>
                     </div>
                     <div class="ci-text">
-                      <h5>Indore, Madhya Pradesh, India</h5>
+                      <h5>Mumbai, Maharashta, India</h5>
                     </div>
                   </div>
                   <div class="contact-info-block">
