--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
     </div>
 <script>
 function sendMessage(){
-	window.open('https://mail.google.com/mail/?view=cm&fs=1&to=patidar,sumit1110@gmail.com&su=Message from '+document.getElementById("form_name").value +'&body='+document.getElementById("form_message").value +'&bcc=', '_blank');
+	window.open('https://mail.google.com/mail/?view=cm&fs=1&to=patidar.sumit1110@gmail.com&su=Message from '+document.getElementById("form_name").value +'&body='+document.getElementById("form_message").value +'&bcc=', '_blank');
 }
 
 </script>
