--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- Header -->
       <header id="site_header" class="header mobile-menu-hide">
         <div class="my-photo">
-          <img src="images/my_2019.jpg" alt="image">
+          <img src="images/my_2019.jpg" alt="sipspatidar">
           <div class="mask"></div>
         </div>
 
