added firm mnagement project and update resume link

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 			  <div class="row">
                 <div style="float:right"class="col-sm-12 col-md-4">
                   <div class="download-cv-block">
-                    <a class="button" target="_blank" href="https://drive.google.com/open?id=125qun9YbFzq-CKct5SwdnUmX9E1mVBqF"> <i style="font-size:1.5em" class="fa fa-download"> </i>  Download CV </a>
+                    <a class="button" target="_blank" href="https://drive.google.com/file/d/0B8g5EayI7z9eSzdSOVZsQm9OME5PazNDR0kyN0p5TWlDZjVn/view?usp=sharing"> <i style="font-size:1.5em" class="fa fa-download"> </i>  Download CV </a>
                   </div>
                 </div>
               </div>
@@ -378,7 +378,23 @@
                     </a>
                   </figure>
                   <!-- /Portfolio Item 3 -->
-<!-- Portfolio Item 4 -->
+
+				  
+				  <!-- Portfolio Item 8 -->
+                  <figure class="item" data-groups='["all", "Python"]'>
+                    <a target="_blank" href="https://youtu.be/xhWq5r6TqWk">
+                      <img src="images/portfolio/8.png" alt="">
+                      <div>
+                        <h5 class="name">Firm Management Desktop Application</h5>
+                        <small>Python</small>
+                        <i class="fa fa-file-text-o"></i>
+                      </div>
+                    </a>
+                  </figure>
+                  <!-- /Portfolio Item 4 -->
+
+				  
+				  <!-- Portfolio Item 4 -->
                   <figure class="item" data-groups='["all", "Python"]'>
                     <a target="_blank" href="https://www.youtube.com/watch?v=pgqRLzjtCjM">
                       <img src="images/portfolio/4.jpg" alt="">
