--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <h3>Coding Skills</h3>
                   </div>
                   <div class="skills-info">
-                    <h4>C/C++</h4>                               
+                    <h4>AngularJS</h4>                               
                     <div class="skill-container">
                       <div class="skill-percentage skill-1"></div>
                     </div>
@@ -275,10 +275,10 @@
                     <div class="skill-container">
                       <div class="skill-percentage skill-2"></div>
                     </div>
-					<h4>PHP</h4>                               
+					<!--<h4>PHP</h4>                               
                     <div class="skill-container">
                       <div class="skill-percentage skill-3"></div>
-                    </div>
+                    </div>-->
 					<h4>MYSQL</h4>                               
                     <div class="skill-container">
                       <div class="skill-percentage skill-4"></div>
@@ -444,7 +444,18 @@
                     </a>
                   </figure>
                   <!-- /Portfolio Item 7 -->
-
+				<!-- Portfolio Item 9 -->
+                  <figure class="item" data-groups='["all", "Python"]'>
+                    <a target="_blank" href="https://youtu.be/xiuD9Ebe_os">
+                      <img src="images/portfolio/9.jpg" alt="">
+                      <div>
+                        <h5 class="name">Instagram-Backup-Data-Viewer</h5>
+                        <small>Python</small>
+                        <i class="fa fa-file-text-o"></i>
+                      </div>
+                    </a>
+                  </figure>
+                  <!-- /Portfolio Item 1 -->
                   
                 </div>
                 <!-- /Portfolio Grid -->
