--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="site-title-block">
           <h1 class="site-title">Sumit Patidar</h1>
-          <p class="site-description">Programmer</p>
+          <p class="site-description">Full Stack Developer</p>
         </div>
 
         <!-- Navigation & Social buttons -->
@@ -129,11 +129,14 @@
                     <div>
                       <p class="home-page-description">Software Engineer</p>
                     </div>
+			<div>
+                      <p class="home-page-description">Full Stack Developer</p>
+                    </div>
                   </div>
 
                   <div class="block end" style="text-align: center">
                     <ul class="info-list">
-                      <li><span class="title">Age</span><span class="value">24</span></li>
+                      <li><span class="title">Age</span><span class="value">25</span></li>
                       <li><span class="title">Address</span><span class="value">Indore, Madhya Pradesh, India</span></li>
                       <li><span class="title">e-mail</span><span class="value"><a href="mailto:patidar.sumit1110@gmail.com">patidar.sumit1110@gmail.com</a></span></li>
                       <li><span class="title">Phone</span><span class="value">+91 741 588 5005</span></li>
@@ -149,16 +152,15 @@
             <section class="pt-page pt-page-2" data-id="about_me">
               <div class="section-title-block">
                 <h2 class="section-title">About Me</h2>
-                <h5 class="section-description">Programmer, Quick Learner, Creative</h5>
+                <h5 class="section-description">Deeveloper, Quick Learner, Creative</h5>
               </div>
 
               <div class="row">
                 <div class="col-sm-6 col-md-6 subpage-block">
                   <div class="general-info">
                     <h3>I am Sumit Patidar</h3>
-                    <p>I have completed my Bachelor's Degree with Specialization in Computer Science. Currently I am working in Tata Consultancy Services as System Engineer with more than 2 year of experience.</p>
-                    <br>
-					<p>I have a key hand in python. I have completed 9 projects successfully, in that 5 are completely based on python language and other 4 are based on PHP, Java, JavaScript.</p>
+                    <p>Results-oriented software engineer with a focus on the design and implementation with 3+ years of experience in developing cutting-edge engineering solutions with a wide range of web application features. Skilled in agile processes, backend and frontend development that integrate with third party APIs.</p>
+			 
                   </div>
                 </div>
 				 <div class="col-sm-6 col-md-6 subpage-block row">
@@ -707,7 +709,7 @@
                       <i class="pe-7s-icon pe-7s-map-marker"></i>
                     </div>
                     <div class="ci-text">
-                      <h5>Mumbai, Maharashta, India</h5>
+                      <h5>Indore, Madhya Pradesh, India</h5>
                     </div>
                   </div>
                   <div class="contact-info-block">
